# dotfiles

./: .configignore  .gitignore  .gitmodules  .tmux.conf  AGENTS.md  README.md  build.py  config.py  install.sh  pyproject.toml  setup.sh
agents/skills/command-name-ideas/: SKILL.md
agents/skills/design-an-interface/: SKILL.md
agents/skills/doctools/: SKILL.md
agents/skills/dstu-report/: SKILL.md
agents/skills/egui-visual-testing/: SKILL.md
agents/skills/grill-me/: SKILL.md
agents/skills/improve-codebase-architecture/: SKILL.md
agents/skills/notebook-tools/: SKILL.md
agents/skills/obsidian-vault/: SKILL.md
agents/skills/playwright/: SKILL.md
agents/skills/project-bootstrap/: SKILL.md
agents/skills/rust-hotpath-profiler/: SKILL.md
agents/skills/simple-design/: SKILL.md
agents/skills/skill-creator/: SKILL.md
agents/skills/skill-installer/: SKILL.md
agents/skills/tdd/: SKILL.md
agents/skills/to-prd/: SKILL.md
agents/skills/ubiquitous-language/: SKILL.md
agents/skills/zoom-out/: SKILL.md
blog/nvim/: part0.md
browser/firefox/: user.js
codex/: config.toml
codex/skills/approval-rules-auditor/: SKILL.md
codex/skills/playwright/: SKILL.md
editors/nvim/: .stylua.toml  ale.vim  coc-settings.json  coc.vim  init.lua  init.vim  init_test.vim  keys.vim  language_client.vim  lazy-lock.json  plugins.vim
editors/nvim-old/: coc-settings.json  coc.vim  code_stats.vim  deoplete.vim  init.vim  keys.vim  language_client.vim
editors/nvim-old/colors/: muclor.vim
other/mpv/: input.conf  mpv.conf
other/rofi/: config.rasi
pagers/most/: .mostrc
scripts/: efi.sh
scripts/proctrace/: MANUAL.md  PLAN.md  README.md  pyproject.toml
scripts/proctrace/src/proctrace/: __init__.py  cli.py  models.py  report.py  snapshot.py  tree.py
scripts/proctrace/src/proctrace/backends/: __init__.py  macos_vmmap.py  psutil_backend.py
scripts/proctrace/tests/: test_report.py  test_snapshot.py  test_tree.py  test_vmmap.py
scripts/proctrace/tests/fixtures/: vmmap_node_summary.txt
shells/fish/: config.fish
shells/zsh/: zshenv  zshrc
terminals/alacritty/: alacritty.yml
terminals/alacritty-mac/: alacritty.toml  alacritty.yml
terminals/ghostty/: config
terminals/kitty/: kitty.conf
tests/: test_config.py
tmux/: .tmux.conf
wm/awesome/: july.lua  move.lua  rc.lua  theme.lua
wm/i3/: config
wm/qtile/: config.py
(+100 files in other folders)
