[project]
name = "dotfiles"
version = "0.0.1"
description = "simple dotfile manager"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.mypy]
python_version = 3.12
warn_unused_configs = true
warn_unreachable = true
check_untyped_defs = true
