[project]
name = "proctrace"
version = "0.1.0"
description = "Snapshot-first macOS process explorer with vmmap enrichment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.0.0",
]

[project.scripts]
proctrace = "proctrace:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "types-psutil>=7.0.0.20250601",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proctrace"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
warn_unreachable = true

[tool.ruff]
line-length = 80
